--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -21,7 +21,7 @@
             <div class="menu">
                 <a href="#">Home</a>
                 <a href="#">Sobre</a>
-                <a href="#">Skills</a>
+                <!-- <a href="#">Skills</a> -->
                 <a id="contato" href="#">Contato</a>
             </div>
         </nav>
