--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -19,11 +19,11 @@
                 <h2>Front-End Developer</h2>
             </div>
             <div class="menu">
-                <a href="#">Home</a>
+                <!-- <a href="#">Home</a>
                 <a href="#">Sobre</a>
-                <!-- <a href="#">Skills</a> -->
+                <a href="#">Skills</a>
                 <a id="contato" href="#">Contato</a>
-            </div>
+            </div> -->
         </nav>
     </header>
 </body>
