--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -18,13 +18,13 @@
                 <h1>Felipe Souza Silva</h1>
                 <h2>Front-End Developer</h2>
             </div>
-            <!-- <div class="menu">
+            <div class="menu">
                 <a href="#">Home</a>
                 <a href="#">Sobre</a>
                 <a href="#">Skills</a>
                 <a id="contato" href="#">Contato</a>
             </div>
-        </nav> -->
+        </nav>
     </header>
 </body>
 </html>
