--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -12,7 +12,6 @@
     <title>Portifolio</title>
 </head>
 <body>
-    <header>
         <nav class="navbar">
             <div class="logo">
                 <h1>Felipe Souza Silva</h1>
@@ -25,6 +24,18 @@
                 <a id="contato" href="#">Contato</a>
             </div>
         </nav>
-    </header>
+        <header class="header">
+            <div class="headline">
+                <h2 style="font-size:15px;letter-spacing:15px ">Você achou a melhor</h2>
+                <h2 style="font-size:80px;">Agência Digital</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fuga dolorem, error quia placeat minima, saepe minus repudiandae a beatae officiis explicabo sunt cum officia accusantium ad, reiciendis neque! Incidunt?</p>
+                <a href="#" class="contact-btn">Contrate agora</a>
+                
+            </div>
+            <div class="img-headline">
+                <img style="max-width: 100%;" src="/img/3657664.jpg" alt="">
+            </div>
+        </header>
+
 </body>
 </html>
