--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -29,13 +29,20 @@
                 <h2 style="font-size:15px;letter-spacing:15px ">Você achou a melhor</h2>
                 <h2 style="font-size:80px;">Agência Digital</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fuga dolorem, error quia placeat minima, saepe minus repudiandae a beatae officiis explicabo sunt cum officia accusantium ad, reiciendis neque! Incidunt?</p>
-                <a href="#" class="contact-btn">Contrate agora</a>
-                
+                <a href="#" class="contact-btn">Contrate agora</a>              
             </div>
             <div class="img-headline">
                 <img style="max-width: 100%;" src="/img/3657664.jpg" alt="">
             </div>
         </header>
+        <section>
+            <h2>O que podemos fazer pelo seu negócio ?</h2>
+            <div class="serviço">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+        </section>
 
 </body>
 </html>
