--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -26,8 +26,8 @@
         </nav>
         <header class="header">
             <div class="headline">
-                <h2 style="font-size:15px;letter-spacing:15px ">Você achou a melhor</h2>
-                <h2 style="font-size:80px;">Agência Digital</h2>
+                <h2 style="font-size:15px;letter-spacing:15px ">Front-End</h2>
+                <h2 style="font-size:80px;">Desenvolvedor Web</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fuga dolorem, error quia placeat minima, saepe minus repudiandae a beatae officiis explicabo sunt cum officia accusantium ad, reiciendis neque! Incidunt?</p>
                 <a href="#" class="contact-btn">Contrate agora</a>
                 
