--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -9,11 +9,14 @@
     <meta name="Author" content="Felpa7k"> 
     <link rel="stylesheet" type="text/css" href="/css/reset.css" media="screen">   
     <link rel="stylesheet" type="text/css" href="/css/folha.css" media="screen">
+    <script src="https://kit.fontawesome.com/4faa7f16e4.js" crossorigin="anonymous"></script>
     <title>Portifolio</title>
 </head>
 <body>
         <nav class="navbar">
+            <img class="foto" src="/img/132855521.jpg" alt="foto de perfil">
             <div class="logo">
+
                 <h1>Felipe Souza Silva</h1>
                 <h2>Front-End Developer</h2>
             </div>
@@ -26,10 +29,11 @@
         </nav>
         <header class="header">
             <div class="headline">
-                <h2 style="font-size:15px;letter-spacing:15px ">Você achou a melhor</h2>
-                <h2 style="font-size:80px;">Agência Digital</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fuga dolorem, error quia placeat minima, saepe minus repudiandae a beatae officiis explicabo sunt cum officia accusantium ad, reiciendis neque! Incidunt?</p>
-                <a href="#" class="contact-btn">Contrate agora</a>              
+                <h2 style="font-size:25px;letter-spacing:8px ">Análise e Desenvolvimento de Sistemas</h2>
+                <h2 style="font-size:80px;">Meu primeiro projeto.</h2>
+                <p>Olá, eu sou o Felipe, formado em Análise e Desenvolvimento de Sistemas , no momento presente atuando na área de Assistente de T.I. Busco minha primeira oportunidade na área de Desenvolvimento Front-End, sempre empenhado em obter novos conhecimentos para solucionar desafios da melhor forma.</p>
+                <a href="https://www.linkedin.com/in/felipe-souza-silva-07286a253/" class="contact-btn" target="_blank"><i class="fa-brands fa-linkedin fa-beat fa-2xl"></i></a>     
+                <a href="https://github.com/Felpa7k1" class="contact-btn" target="_blank"><i class="fa-brands fa-github fa-beat fa-2xl"></i></a>         
             </div>
             <div class="img-headline">
                 <img style="max-width: 100%;" src="/img/3657664.jpg" alt="">
